gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oss-scg
  namespace: demo-eureka
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: oss-scg
  type: ClusterIP
