gateway/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oss-scg-ingress
  namespace: demo-eureka
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: demo-eureka.apps-contour.awstmc.sschmidt.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oss-scg
                port:
                  number: 8080
